<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdvAvatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                fresco:placeholderImage="@android:drawable/ic_menu_camera"
                fresco:roundingBorderColor="@color/colorTextPrimaryDark"
                fresco:roundingBorderWidth="1dp" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_first_name"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_last_name"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile_bio"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/edit_profile_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/edit_profile_city"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/edit_profile_gender"
                android:maxLines="1" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:minHeight="0dp"
                android:padding="8dp"
                android:text="@string/edit_profile_save"
                android:textColor="@color/colorTextPrimary" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>